# earthquake_sounds

./: .gitignore  README.md  docker-compose.yml
app/: .pre-commit-config.yaml  Dockerfile  api.py  app.py  pyproject.toml  test.py  test_api.py
app/static/js/: websocket.js
app/templates/: index.html  websocket.html
obspy/: pyproject.toml  run_obspy.py
obspy/earthquakes/11931570_4.0/: 176.12_AK.SII.mseed  94.78_AK.CHI.mseed
obspy/earthquakes/11931575_1.3/: 104.35_AK.PS06.mseed  112.25_IM.IL31.mseed  117.47_AK.H24K.mseed  122.60_AK.PS08.mseed  123.70_AK.HDA.mseed  126.76_AK.BPAW.mseed  135.81_AK.MCK.mseed  172.37_AK.RND.mseed  184.18_AK.PPD.mseed  186.72_AK.J25K.mseed  190.44_AK.CHUM.mseed  23.70_AK.I23K.mseed  39.78_AK.NEA2.mseed  46.66_AK.MDM.mseed  60.14_AK.PS07.mseed  64.71_IU.COLA.mseed  74.97_AK.CCB.mseed  75.23_AK.WRH.mseed  86.30_AK.POKR.mseed
obspy/earthquakes/11931578_1.52/: 74.59_BK.MCCM.mseed
obspy/earthquakes/11931591_2.01/: 112.72_CI.BFS.mseed  120.13_CI.EDW2.mseed  125.64_CI.MPP.mseed  141.93_CI.ADO.mseed  142.75_CI.BAK.mseed  151.27_CI.VTV.mseed  163.05_CI.SVD.mseed  163.15_CI.MUR.mseed  171.10_AZ.SMER.mseed  172.35_CI.SMM.mseed  177.95_CI.DGR.mseed  179.94_CI.ISA.mseed  180.44_CI.BBR.mseed  189.89_CI.LRL.mseed  192.99_AZ.RDM.mseed  193.27_CI.RRX.mseed  197.16_CI.VES.mseed  37.97_CI.DJJ.mseed  52.87_CI.DEC.mseed  53.72_CI.USC.mseed  56.12_CI.RPV.mseed  61.45_CI.OSI.mseed  63.61_CI.PASC.mseed  66.21_CI.FMP.mseed  76.20_CI.MWC.mseed  85.30_CI.CIA.mseed  88.31_CI.SBC.mseed
obspy/earthquakes/11932329_1.6/: 22.89_TX.PB09.mseed
obspy/earthquakes/11932359_2.29/: 118.06_US.WMOK.mseed
(+15 files in other folders)
