[tool.poetry]
name = "app"
version = "0.1.0"
description = "Webserver for EarthSounds"
authors = ["Selwyn-Lloyd McPherson <selwyn.mcpherson@gmail.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-socketio = "^5.5.1"
eventlet = "^0.38.2"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
black = "^24.10.0"
ruff = "^0.9.1"
pre-commit = "^4.0.1"

[tool.ruff]
# Enable select linting rules
select = ["E", "F", "W", "B", "I"]  # Example: PEP 8, Flake8, Import rules
ignore = ["E501"]  # Ignore line length if using Black

# Format imports
required-version = "0.9.1"
line-length = 88  # Match Black's default line length

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
