[tool.poetry]
name = "earthsounds-obspy"
version = "0.1.0"
description = ""
authors = ["Selwyn-Lloyd McPherson <selwyn.mcpherson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
obspy = "^1.4.1"
snowflake-connector-python = "^3.13.2"
boto3 = "^1.36.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
